objects/MDPERSONATOR__MD_propertyResult__c.object
<CustomObject>
    <fields>
        <fullName>MDPERSONATOR__APNYearChange__c</fullName>
        <label>APNYearChange</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AccessabilityElevatorFlag__c</fullName>
        <label>AccessabilityElevatorFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AccessabilityHandicapFlag__c</fullName>
        <label>AccessabilityHandicapFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AccountNumber__c</fullName>
        <label>AccountNumber</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressKey__c</fullName>
        <label>AddressKey</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Address__c</fullName>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AlternateAPN__c</fullName>
        <label>AlternateAPN</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ArborPergolaFlag__c</fullName>
        <label>ArborPergolaFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Area1stFloor__c</fullName>
        <label>Area1stFloor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Area2ndFloor__c</fullName>
        <label>Area2ndFloor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AreaBuildingDefinitionCode__c</fullName>
        <label>AreaBuildingDefinitionCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AreaBuilding__c</fullName>
        <label>AreaBuilding</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AreaGross__c</fullName>
        <label>AreaGross</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AreaLotAcres__c</fullName>
        <label>AreaLotAcres</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AreaLotSF__c</fullName>
        <label>AreaLotSF</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AreaUpperFloors__c</fullName>
        <label>AreaUpperFloors</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ArenaFlag__c</fullName>
        <label>ArenaFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AssessedImprovementsPerc__c</fullName>
        <label>AssessedImprovementsPerc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AssessedValueImprovements__c</fullName>
        <label>AssessedValueImprovements</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AssessedValueLand__c</fullName>
        <label>AssessedValueLand</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AssessedValueTotal__c</fullName>
        <label>AssessedValueTotal</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AssessorLastSaleAmount__c</fullName>
        <label>AssessorLastSaleAmount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AssessorLastSaleDate__c</fullName>
        <label>AssessorLastSaleDate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AssessorPriorSaleAmount__c</fullName>
        <label>AssessorPriorSaleAmount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AssessorPriorSaleDate__c</fullName>
        <label>AssessorPriorSaleDate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AssrLastUpdated__c</fullName>
        <label>AssrLastUpdated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AtticArea__c</fullName>
        <label>AtticArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AtticFlag__c</fullName>
        <label>AtticFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BalconyArea__c</fullName>
        <label>BalconyArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BaseMAK__c</fullName>
        <label>BaseMAK</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BasementAreaFinished__c</fullName>
        <label>BasementAreaFinished</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BasementAreaUnfinished__c</fullName>
        <label>BasementAreaUnfinished</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BasementArea__c</fullName>
        <label>BasementArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BathCount__c</fullName>
        <label>BathCount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BathHouseArea__c</fullName>
        <label>BathHouseArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BathHouseFlag__c</fullName>
        <label>BathHouseFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BathPartialCount__c</fullName>
        <label>BathPartialCount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BedroomsCount__c</fullName>
        <label>BedroomsCount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Block1__c</fullName>
        <label>Block1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Block2__c</fullName>
        <label>Block2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BoatAccessFlag__c</fullName>
        <label>BoatAccessFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BoatHouseArea__c</fullName>
        <label>BoatHouseArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BoatHouseFlag__c</fullName>
        <label>BoatHouseFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BoatLiftFlag__c</fullName>
        <label>BoatLiftFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BonusRoomFlag__c</fullName>
        <label>BonusRoomFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BreakfastNookFlag__c</fullName>
        <label>BreakfastNookFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BreezewayFlag__c</fullName>
        <label>BreezewayFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__BuildingsCount__c</fullName>
        <label>BuildingsCount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CBSACode__c</fullName>
        <label>CBSACode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CBSAName__c</fullName>
        <label>CBSAName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CabinArea__c</fullName>
        <label>CabinArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CabinFlag__c</fullName>
        <label>CabinFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CanopyArea__c</fullName>
        <label>CanopyArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CanopyFlag__c</fullName>
        <label>CanopyFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CarrierRoute__c</fullName>
        <label>CarrierRoute</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CellarFlag__c</fullName>
        <label>CellarFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CellarWineFlag__c</fullName>
        <label>CellarWineFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CensusBlockGrp__c</fullName>
        <label>CensusBlockGrp</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CensusBlock__c</fullName>
        <label>CensusBlock</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CensusTract__c</fullName>
        <label>CensusTract</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CentralVacuumFlag__c</fullName>
        <label>CentralVacuumFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__City__c</fullName>
        <label>City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CompanyFlag__c</fullName>
        <label>CompanyFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ConfidenceScore__c</fullName>
        <label>ConfidenceScore</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ConstructionFireResistanceClass__c</fullName>
        <label>ConstructionFireResistanceClass</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Construction__c</fullName>
        <label>Construction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CourtyardArea__c</fullName>
        <label>CourtyardArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CourtyardFlag__c</fullName>
        <label>CourtyardFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DeckArea__c</fullName>
        <label>DeckArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DeckFlag__c</fullName>
        <label>DeckFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DeedLastDocumentNumber__c</fullName>
        <label>DeedLastDocumentNumber</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DeedLastSaleDate__c</fullName>
        <label>DeedLastSaleDate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DeedLastSaleDocumentBook__c</fullName>
        <label>DeedLastSaleDocumentBook</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DeedLastSaleDocumentPage__c</fullName>
        <label>DeedLastSaleDocumentPage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DeedLastSalePrice__c</fullName>
        <label>DeedLastSalePrice</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DeedLastSaleTxID__c</fullName>
        <label>DeedLastSaleTxID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DrivewayArea__c</fullName>
        <label>DrivewayArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DrivewayMaterial__c</fullName>
        <label>DrivewayMaterial</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EscalatorFlag__c</fullName>
        <label>EscalatorFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EstimatedMaxValue__c</fullName>
        <label>EstimatedMaxValue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EstimatedMinValue__c</fullName>
        <label>EstimatedMinValue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EstimatedValue__c</fullName>
        <label>EstimatedValue</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ExcerciseFlag__c</fullName>
        <label>ExcerciseFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Exterior1Code__c</fullName>
        <label>Exterior1Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__FIPSCode__c</fullName>
        <label>FIPS Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__FamilyCode__c</fullName>
        <label>FamilyCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__FeatureBalconyFlag__c</fullName>
        <label>FeatureBalconyFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__FenceArea__c</fullName>
        <label>FenceArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__FenceCode__c</fullName>
        <label>FenceCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__FireplaceCount__c</fullName>
        <label>FireplaceCount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Fireplace__c</fullName>
        <label>Fireplace</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__FlooringMaterialPrimary__c</fullName>
        <label>FlooringMaterialPrimary</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__FormattedAPN__c</fullName>
        <label>FormattedAPN</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Foundation__c</fullName>
        <label>Foundation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GameFlag__c</fullName>
        <label>GameFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GazeboArea__c</fullName>
        <label>GazeboArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GazeboFlag__c</fullName>
        <label>GazeboFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GolfCourseGreenFlag__c</fullName>
        <label>GolfCourseGreenFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GranaryArea__c</fullName>
        <label>GranaryArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GranaryFlag__c</fullName>
        <label>GranaryFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GranteeName1Full__c</fullName>
        <label>GranteeName1Full</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GranteeName2Full__c</fullName>
        <label>GranteeName2Full</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GranteeName3Full__c</fullName>
        <label>GranteeName3Full</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GrantorName1Full__c</fullName>
        <label>GrantorName1Full</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GrantorName2Full__c</fullName>
        <label>GrantorName2Full</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GrantorName3Full__c</fullName>
        <label>GrantorName3Full</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GreatFlag__c</fullName>
        <label>GreatFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GreenHouseArea__c</fullName>
        <label>GreenHouseArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GreenHouseFlag__c</fullName>
        <label>GreenHouseFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GuestHouseArea__c</fullName>
        <label>GuestHouseArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GuestHouseFlag__c</fullName>
        <label>GuestHouseFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__HVACCoolingDetail__c</fullName>
        <label>HVACCoolingDetail</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__HVACHeatingDetail__c</fullName>
        <label>HVACHeatingDetail</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__HVACHeatingFuel__c</fullName>
        <label>HVACHeatingFuel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__HobbyFlag__c</fullName>
        <label>HobbyFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IntercomFlag__c</fullName>
        <label>IntercomFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__InteriorStructure__c</fullName>
        <label>InteriorStructure</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__KennelArea__c</fullName>
        <label>KennelArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__KennelFlag__c</fullName>
        <label>KennelFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName1First__c</fullName>
        <label>LastDeedName1First</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName1Full__c</fullName>
        <label>LastDeedName1Full</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName1Last__c</fullName>
        <label>LastDeedName1Last</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName1Middle__c</fullName>
        <label>LastDeedName1Middle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName1Suffix__c</fullName>
        <label>LastDeedName1Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName2First__c</fullName>
        <label>LastDeedName2First</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName2Full__c</fullName>
        <label>LastDeedName2Full</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName2Last__c</fullName>
        <label>LastDeedName2Last</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName2Middle__c</fullName>
        <label>LastDeedName2Middle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName2Suffix__c</fullName>
        <label>LastDeedName2Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName3First__c</fullName>
        <label>LastDeedName3First</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName3Full__c</fullName>
        <label>LastDeedName3Full</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName3Last__c</fullName>
        <label>LastDeedName3Last</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName3Middle__c</fullName>
        <label>LastDeedName3Middle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastDeedName3Suffix__c</fullName>
        <label>LastDeedName3Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastOwnershipTransferDate__c</fullName>
        <label>LastOwnershipTransferDate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastOwnershipTransferDocumentNumber__c</fullName>
        <label>LastOwnershipTransferDocumentNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastOwnershipTransferTxID__c</fullName>
        <label>LastOwnershipTransferTxID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LastTaxRollUpdate__c</fullName>
        <label>LastTaxRollUpdate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LaundryFlag__c</fullName>
        <label>LaundryFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LeanToArea__c</fullName>
        <label>LeanToArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LeanToFlag__c</fullName>
        <label>LeanToFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LegalDescription__c</fullName>
        <label>LegalDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LenderCode__c</fullName>
        <label>LenderCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LenderName__c</fullName>
        <label>LenderName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LoadingPlatformArea__c</fullName>
        <label>LoadingPlatformArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LoadingPlatformFlag__c</fullName>
        <label>LoadingPlatformFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LotDepth__c</fullName>
        <label>LotDepth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LotNumber1__c</fullName>
        <label>LotNumber1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LotNumber2__c</fullName>
        <label>LotNumber2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LotNumber3__c</fullName>
        <label>LotNumber3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LotWidth__c</fullName>
        <label>LotWidth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MAK__c</fullName>
        <label>MAK</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MSACode__c</fullName>
        <label>MSACode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MSAName__c</fullName>
        <label>MSAName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MapBook__c</fullName>
        <label>MapBook</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MapPage__c</fullName>
        <label>MapPage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Mapping__c</fullName>
        <label>Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MarketImprovementsPerc__c</fullName>
        <label>MarketImprovementsPerc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MarketValueImprovements__c</fullName>
        <label>MarketValueImprovements</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MarketValueLand__c</fullName>
        <label>MarketValueLand</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MarketValueTotal__c</fullName>
        <label>MarketValueTotal</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MarketValueYear__c</fullName>
        <label>MarketValueYear</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MediaFlag__c</fullName>
        <label>MediaFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MetropolitanDivision__c</fullName>
        <label>MetropolitanDivision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MilkHouseArea__c</fullName>
        <label>MilkHouseArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MilkHouseFlag__c</fullName>
        <label>MilkHouseFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MinorCivilDivisionCode__c</fullName>
        <label>MinorCivilDivisionCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MinorCivilDivisionName__c</fullName>
        <label>MinorCivilDivisionName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MobileHomeHookupFlag__c</fullName>
        <label>MobileHomeHookupFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MortgageAmount__c</fullName>
        <label>MortgageAmount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MortgageDate__c</fullName>
        <label>MortgageDate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MortgageDueDate__c</fullName>
        <label>MortgageDueDate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MortgageLoanTypeCode__c</fullName>
        <label>MortgageLoanTypeCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MortgageTermCode__c</fullName>
        <label>MortgageTermCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MortgageTerm__c</fullName>
        <label>MortgageTerm</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MudFlag__c</fullName>
        <label>MudFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name1First__c</fullName>
        <label>Name1First</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name1Full__c</fullName>
        <label>Name1Full</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name1Last__c</fullName>
        <label>Name1Last</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name1Middle__c</fullName>
        <label>Name1Middle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name1Suffix__c</fullName>
        <label>Name1Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name2First__c</fullName>
        <label>Name2First</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name2Full__c</fullName>
        <label>Name2Full</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name2Last__c</fullName>
        <label>Name2Last</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name2Middle__c</fullName>
        <label>Name2Middle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name2Suffix__c</fullName>
        <label>Name2Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name3First__c</fullName>
        <label>Name3First</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name3Full__c</fullName>
        <label>Name3Full</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name3Last__c</fullName>
        <label>Name3Last</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name3Middle__c</fullName>
        <label>Name3Middle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Name3Suffix__c</fullName>
        <label>Name3Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NeighborhoodCode__c</fullName>
        <label>NeighborhoodCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OfficeArea__c</fullName>
        <label>OfficeArea</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OfficeFlag__c</fullName>
        <label>OfficeFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OutdoorKitchenFireplaceFlag__c</fullName>
        <label>OutdoorKitchenFireplaceFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OverheadDoorFlag__c</fullName>
        <label>OverheadDoorFlag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>